2002-11-15  David N. Welton  <davidw@dedasys.com>

	* uri.tcl: Bump patchlevel in 'package provide'.

	* uri.test: Added tests for 'news' splitting and joining.

	* uri.man: Added 'news' to list of supported uri's.

	* uri.tcl (uri::SplitNews) (uri::JoinNews): Join and split 'news'
	URI's.  Fixes 636977.

	* uri.test: Added test to make sure that a URI can be split and
	then joined. to make sure the change below works.

	* uri.tcl (uri::JoinHttpInner): Make this proc deal with
	'fragments' - i.e. the #foo part of a URI.  Fixes 638075.

	* uri.test: Added tests relevant to the fix below.

	* uri.tcl (uri::resolve): Fix handling of queries so that the
	'new' query overrides the 'old' one.  This is how browsers do it.
	Fixes 639036.

2002-06-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* urn-scheme.tcl: Moved provide up to the front to prevent
	  problems with [pkg_mkIndex]. Added namespace creation commands
	  to the top for the same reason.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri.man: Fixed formatting errors in the doctools manpage.

2002-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri.tcl: Fixed "::uri::canonicalize" to pass the extended
	  testsuite. The change to testsuite and command implementation
	  here was triggered through work on a spider and real life urls,
	  some of which where handled incorrectly.

	* uri.test: Extended the testsuite for "::uri::canonicalize" a
	  lot. Handling of uris with a path, without a path, unknown uri
	  schemes, path components which contain a ".", but are neither
	  "."  nor "..".

2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* urn-scheme.tcl: Frink run.

	* Version is now 1.1.1 to distinguish from the code in tcllib
	  release 1.2

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.1

2001-11-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>
